--- a/views/index.html
+++ b/views/index.html
@@ -46,9 +46,8 @@
                 <ul class="nav navbar-nav">
                   <li><a href="/">Home</a></li>
                   <li><a href='/theGuide'>The Guide</a><li>
-                  <li><a href='/overview'>Machine Learning Overview</a><li>
-                  <li><a href="/team">The Team</a></li>
-                  </li>
+                  <li><a href='/overview'>Machine Learning Overview</a></li>
+                  <li class="floatRight"><a href="/team">The Team</a></li>
                 </ul>
               </div>
             </div>
