changed styles of tour popup

--- a/public/views/mainindex.html
+++ b/public/views/mainindex.html
@@ -4,6 +4,7 @@
   steps: [
   {
     element: ".carousel-caption",
+    placement: 'top',
     title: "Welcome to Galaxy Quest!  Over a span of two weeks, we built a machine to classify galaxies.",
     content: "We'd like to explain a few short things first, but if you'd like to explore on your own, you can always exit the tour!"
   },
