--- a/views/index.html
+++ b/views/index.html
@@ -16,13 +16,14 @@
     <script src='../scripts/directives/randomForestsDirective.js'></script>
     <script src='../scripts/directives/featuresDirective.js'></script>
     <script src="../bower_components/d3/d3.min.js" charset="utf-8"></script>
-    <script src="../bower_components/c3/c3.min.js"></script> 
+    <script src="../bower_components/c3/c3.min.js"></script>
+    <script src="../styles/bootstrap-tour.js"></script> 
 
     <link rel="shortcut icon" href="./../assets/ico/favicon.ico">
     <link rel='stylesheet' href="../styles/bootstrapDist/css/bootstrap.min.css" >
     <link rel='stylesheet' href="../styles/index.css">
     <link rel="stylesheet" type="text/css" href="../styles/c3.css">
-
+    <link rel="stylesheet" href="../styles/bootstrap-tour.css">
     <link href='http://fonts.googleapis.com/css?family=Averia+Sans+Libre:400,700|Lemon' rel='stylesheet' type='text/css'>
     <title>A Visual Guide to Machine Learning</title>
 
@@ -45,9 +46,10 @@
               <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                   <li><a href="/">Home</a></li>
-                  <li><a href='/theGuide'>The Guide</a><li>
                   <li><a href='/overview'>Machine Learning Overview</a></li>
                   <li class="floatRight"><a href="/team">The Team</a></li>
+                  <li><a id="step-five" href='/theGuide'>The Guide</a><li>
+                  </li>
                 </ul>
               </div>
             </div>
