--- a/public/styles/bootstrap-tour.css
+++ b/public/styles/bootstrap-tour.css
@@ -39,6 +39,8 @@
 }
 .popover[class*="tour-"] {
   z-index: 1100;
+  border-radius: 10px;
+  text-align: center;
 }
 .popover[class*="tour-"] .popover-navigation {
   padding: 9px 14px;
@@ -50,6 +52,8 @@
 .popover[class*="tour-"] .popover-navigation *[data-role="next"],
 .popover[class*="tour-"] .popover-navigation *[data-role="end"] {
   cursor: pointer;
+  color: rgba(216,83,0,1);
+  font-weight: bold;
 }
 .popover[class*="tour-"] .popover-navigation *[data-role="prev"].disabled,
 .popover[class*="tour-"] .popover-navigation *[data-role="next"].disabled,
