changes nav bar and titles

--- a/public/views/mainindex.html
+++ b/public/views/mainindex.html
@@ -63,15 +63,15 @@ tour.start();
           </div>
         </div>
       </div>
+    <div class="examineMachine">
+      <h2>Interact with our Galaxy Classifying Machine</h2>
+    </div>
   </div>
 
     <!-- Marketing messaging and featurettes
     ================================================== -->
     <!-- Wrap the rest of the page in another container to center all the content. -->
   <div class="container index">
-    <div class="chapterTitle">
-      <h2>Interact with our Galaxy Classifying Machine</h2>
-    </div>
     <div class="content galaxyclass" ng-controller='GalaxyClassController'>
       <div class="row galaxyClass">
         <div class="col-md-5">
