--- a/public/views/partials/randomForests.html
+++ b/public/views/partials/randomForests.html
@@ -1,12 +1,12 @@
 <body ng-app="galaxyApp">
   <div class="container index">
   <div class="chapterTitle">
-    <h2>Chapter 2: Researching our Path</h2>
+    <h2>Chapter 2: Plotting our Course</h2>
   </div>
-    <h3>Forging a path through space requires knowedge of the environment</h3><br>
+    <h3>Our heroes devise a plan for their upcoming quest</h3><br>
       <div class="chapter">
       <ul>
-        <li><h4 class="text-info">Find out what other people have done already</h4>
+        <li><h4 class="text-info">Research and Growing Your Knowledge Base</h4>
           <ul><li>In order to create something new, our heroes knew that the first step would be to find out what already had been done.  With the Internet being what it is today, it's easier than ever to access expert level material. Academic research, scholarly articles and YouTube lecture videos from universities and presentations became their starting point.  At this stage, they wanted to study a lot of high-level material to get a feel for the available resources that they could potentially use.  Each crew member conducted presentations for the rest of the group, in order to keep everybody up to speed on their findings.</ul></li>
         </li>
         <li><h4 class="text-info">Narrow your Focus</h4>
@@ -23,11 +23,11 @@
     </div>
     <div class="chapter">
       <ul>
-        <li><h4 class="text-info">Find out what other people have done already</h4>
+        <li><h4 class="text-info">Research and Growing Your Knowledge Base</h4>
             <ul><li>While it took some time to set up our development environment, scikit-learn gave us some direction.  It is specifically built for our type of research and includes a number of modules for us to use in our Galaxy Quest adventure.  In addition, there are many great videos and resources available to teach ourselves about machine learning.  <a href="https://www.youtube.com/user/ProfNandoDF"> Professor Nando de Freitas</a> from the University of British Columbia has an excellent series of lecture videos to start learning.  Thanks Professor de Freitas!</ul></li>
-        <li><h4 class="text-info">Narrow your focus</h4>
+        <li><h4 class="text-info">Narrow your Focus</h4>
           <ul><li>After much research, we decided that we would use a Random Forests regression to solve our problem.  For more in-depth information and a kickass visual on how Random Forests work, check out our <a href="/randomForestsVisual">visualization page.</a></ul></li>
-        <li><h4 class="text-info">Combine your machine and your data</h4>
+        <li><h4 class="text-info">Combine your Machine and your Data</h4>
             <ul><li>The tools we chose came with ways of developing features that we needed for our algorithm.  In particular, scikit-image provided a way to change the size of the images in our dataset and look for certain features within those images, then send them back to our algorithm.  Knowing your dataset, which features you may want to use, and the strengths of your particular algorithm will help you in this step.</ul></li>
           </li>
       </ul>   
