--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -95,7 +95,12 @@ li{
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
-
+.examineMachine {
+  text-align: center;
+  padding-bottom: 5px;
+  padding-top: 5px;
+  font-weight: bold;
+}
 .hypothesis{
   text-align: center;
 }
@@ -175,9 +180,14 @@ li{
 .fa {
   opacity: 0.8;
 }
-.floatRight{
+#floatRight{
   display:block;
   float:right;
+  margin-right: 200px;
+}
+#floatLeft{
+  display:block;
+  margin-left: 150px;
 }
 .dropdown {
   display: none;
@@ -375,4 +385,10 @@ li{
   /*.featurette-heading {
     margin-top: 120px;
   }*/
+}
+
+ul#originGuide a#origins,
+ul#dataGuide a#dataDiscovery {
+color: #fff;
+background: #930;
 }
