--- a/views/index.html
+++ b/views/index.html
@@ -44,19 +44,19 @@
                 </button>
               </div>
               <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
+                <ul id="floatLeft" class="nav navbar-nav">
                   <li><a href="/">Home</a></li>
                   <li><a id="step-five" href='/theGuide'>The Guide</a><li>
                   <li><a href='/overview'>Machine Learning Overview</a></li>
-                  <li class="floatRight"><a href="/team">The Team</a></li>
-                  </li>
+                </ul>
+                <ul class="nav navbar-nav" id="floatRight">
+                  <li><a href="/team">The Team</a></li>
                 </ul>
               </div>
             </div>
           </div>
         </div>
       </div>
-
       <div id="container">
         <div ng-view='  '></div>
       </div>
