--- a/public/views/mainindex.html
+++ b/public/views/mainindex.html
@@ -139,7 +139,7 @@ tour.start();
       <!-- FOOTER -->
       <footer>
         <p class="pull-right"><a href="#">Back to top</a></p>
-        <p>&copy; Hack Reactor Inc &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+        <p>&copy; Created at Hack Reactor Inc - Cohort 9 &middot;</p>
       </footer>
 
     </div><!-- /.container -->
