content to guide adjusted

--- a/public/views/partials/theguide.html
+++ b/public/views/partials/theguide.html
@@ -4,7 +4,7 @@
    <div class="row">
     <div class="subNav">
       <ul class="nav" id="guideNav">
-        <li><a href="/theGuide/ourOrigins" id="origins">Our Origins</a></li> |
+        <li><a href="/theGuide/gettingStarted" id="origins">Getting Started</a></li> |
         <li><a href="/theGuide/discoveringOurData" id="dataDiscovery">Discovering Our Data</a></li> |
         <li><a href="/theGuide/plottingOurCourse" class="one" id="researching">Plotting Our Course</a>
          </li> |
