--- a/public/views/partials/intro.html
+++ b/public/views/partials/intro.html
@@ -1,7 +1,7 @@
     <div class="container mlintro" ng-controller='MLIntroController'>
       <div class = "container index">
         <div class="chapterTitle">
-          <h2>Hitchhikers Guide to Classifying Galaxies</h2>
+          <h2>Hitchhiker's Guide to Classifying Galaxies</h2>
           <h3>An Epic Walkthrough of Implenting Machine Learning Algorithms</h3>
         </div>
         <br>
@@ -10,9 +10,9 @@
             <img class="featurette-image img-responsive" src="../../images/introPic.jpg">
           </div>
           <div class="col-md-7">
-            <h4 class="featurette-heading">Our Origins</h4>
+            <h4 class="featurette-heading">Our Protagonist's Origins</h4>
           </div>
-            <p class="lead">Called into action by <a href="http://www.galaxyzoo.org/#/">Galaxy Zoo Headquarters</a>, our heroes began preparing to explore the universe, searching for signs of sentient. While travelling, they planned to be cryogenically frozen only to be awakened during critical moments of their mission.  Knowing that <a href="https://en.wikipedia.org/wiki/Galaxy_morphological_classification">galaxy shape and morphological features </a>are strong indicators of sentient life, our heroes devised a plan to train their ship's computer to classify galaxies. The more accurate their ship could become in detecting galactic features, the more fruitful our heroes expected their trip to be. Ready for adventure, they set off on their quest.</p>
+            <p class="lead">Called into action by <a href="http://www.galaxyzoo.org/#/">Galaxy Zoo Headquarters</a>, our heroes began preparing to explore the universe, searching for signs of sentient life. While travelling, they planned to be cryogenically frozen, only to be awakened during critical moments during their mission. Knowing <a href="https://en.wikipedia.org/wiki/Galaxy_morphological_classification">galaxy shape and morphological features </a>are strong indicators of sentient life, our heroes devised a plan to train their ship's computer to classify galaxies. The more accurate their ship could become in detecting galactic features, the more fruitful our heroes expected their trip to be. Ready for adventure, they set off on their quest.</p>
           </div>
         </div>
       </div>
