--- a/public/views/partials/intro.html
+++ b/public/views/partials/intro.html
@@ -2,7 +2,7 @@
       <div class = "container index">
         <div class="chapterTitle">
           <h2>Hitchhiker's Guide to Classifying Galaxies</h2>
-          <h3>An Epic Walkthrough of Implenting Machine Learning Algorithms</h3>
+          <h3>An Epic Walkthrough of Implementing Machine Learning Algorithms</h3>
         </div>
         <br>
         <div class="row featurette">
