added step-one id

--- a/public/views/mainindex.html
+++ b/public/views/mainindex.html
@@ -11,8 +11,8 @@
   },
   steps: [
   {
-    element: ".carousel-caption",
-    placement: 'top',
+    element: "#step-one",
+    placement: 'left',
     title: "Welcome to Galaxy Quest!",
     content: "We've built a machine learning algorithm, and we'd love to share our findings with you!"
   },
@@ -56,7 +56,7 @@ tour.start();
           <img src="../images/bluegalaxy.jpg">
           <div class="container">
             <div class="carousel-caption">
-              <h2 class="title">Guidelines for Applying your Machine Learning Algorithm</h2>
+              <h2 id="step-one"class="title">Guidelines for Applying your Machine Learning Algorithm</h2>
               <h3>"A Hitchhikers Guide to Classifying Galaxies"</h3>
               <a class="btn btn-lg btn-primary" href="#/theGuide" role="button">View Now</a>
             </div>
