--- a/public/views/mainindex.html
+++ b/public/views/mainindex.html
@@ -76,11 +76,11 @@ tour.start();
       <div class="row galaxyClass">
         <div class="col-md-5 span9" style="width: 400px;">
           <div class="panel-heading" style="width: 80%; border-radius: 15px;  margin-left: 10%">
-            <h2 class="text-info text-center" style="color: #FFFFFF">Algorithm Inputs</h2>
+            <h2 id="step-two" class="text-info text-center" style="color: #FFFFFF">Algorithm Inputs</h2>
           </div>
           <img class="img-responsive img-rounded galaxy" style="margin-left: 10%; width: 300px" ng-src="{{galaxyURL}}">
           <div><br> 
-            <button ng-click="nextGalaxy();" type="button" class="btn btn-primary">Input Next Galaxy</button> 
+            <button id="step-four"ng-click="nextGalaxy();" type="button" class="btn btn-primary">Input Next Galaxy</button> 
           </div>
         </div>
         <div class="col-md-7 span3">
