removes to top bar and changes text

--- a/public/views/partials/improvingYourAlgorithm.html
+++ b/public/views/partials/improvingYourAlgorithm.html
@@ -9,9 +9,9 @@
     </div>
   </div>
   <div class="col-md-7">
-      <h2 class="featurette-heading">Knowing your Error</h2>
+      <h2 class="featurette-heading">Our Heroes' Progress</h2>
   </div>
-  <p class="lead">Once you have your first result under your belt, your next task is improving the margin of error.</p>
+  <p class="lead">The machine's error margin steadily decreased as our heroes discovered new features and adjusted parameters.</p>
 </div>
 <hr class="featurette-divider">
 <div class="row">
