--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -206,15 +206,24 @@ li{
   display: inline-block;
   font-size: 14px;
 }
-
-
-
+#guideNav>li>a:hover{
+  background: #2b3e50;
+  color: #fff;
+  animation: animate2 1s;
+  -webkit-animation: animate2 1s;
+  -webkit-animation-fill-mode: forwards;
+}
+#guideNav>li>a {
+  transition: color .5s ease-in-out;
+  -webkit-transition: color .5s ease-in-out;
+  -moz-transition: color .5s ease-in-out;
+}
 @keyframes animate {
   0% {
     opacity: 0.7;
-  transform: scale(0.8,0.8);
-  -ms-transform: scale(0.8,0.8);
-  -webkit-transform: scale(0.8,0.8);
+  transform: scale(1,1);
+  -ms-transform: scale(1,1);
+  -webkit-transform: scale(1,1);
 
   }
   100% {
@@ -228,9 +237,9 @@ li{
 @-webkit-keyframes animate {
   0% {
     opacity: 0.7;
-      transform: scale(0.8,0.8);
-  -ms-transform: scale(0.8,0.8);
-  -webkit-transform: scale(0.8,0.8);
+      transform: scale(1,1);
+  -ms-transform: scale(1,1);
+  -webkit-transform: scale(1,1);
   }
   100% {
   opacity: 1;
@@ -239,6 +248,37 @@ li{
   -webkit-transform: scale(1.3,1.3);
   }
 }
+@keyframes animate2 {
+  0% {
+    opacity: 0.7;
+  transform: scale(1,1);
+  -ms-transform: scale(1,1);
+  -webkit-transform: scale(1,1);
+
+  }
+  100% {
+  opacity: 1;
+  transform: scale(1.03,1.03);
+  -ms-transform: scale(1.03,1.03);
+  -webkit-transform: scale(1.03,1.03);
+  }
+}
+
+@-webkit-keyframes animate2 {
+  0% {
+    opacity: 0.7;
+      transform: scale(1,1);
+  -ms-transform: scale(1,1);
+  -webkit-transform: scale(1,1);
+  }
+  100% {
+  opacity: 1;
+  transform: scale(1.03,1.03);
+  -ms-transform: scale(1.03,1.03);
+  -webkit-transform: scale(1.03,1.03)
+  }
+}
+
 
 .fa:hover{
   animation: animate 1s;
