--- a/views/index.html
+++ b/views/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
   <head>
     <script src="../bower_components/jquery/dist/jquery.js"></script>
-    <script src="../bower_components/jquery.localScroll/jquery.localScroll.min.js"></script>
-    <script src="../bower_components/jquery.scrollTo/jquery.scrollTo.min.js"></script>  
+    <script src="../scripts/jquery-scrollto.js"></script>
     <script src="../styles/bootstrapDist/js/bootstrap.min.js"></script>
     <script src="../styles/bootstrapIndexAssets-js/docs.min.js"></script>
     <script src='../bower_components/angular/angular.js'></script>
