--- a/public/views/partials/iterationAndTesting.html
+++ b/public/views/partials/iterationAndTesting.html
@@ -1,4 +1,6 @@
-
+<script>
+    $("#testFlight").css("font-weight", "bold")
+</script>
 <div class = "container index">
   <div class="chapterTitle">
     <h2>Chapter 3: Building our 1st Machine and Test Flight</h2>
