--- a/public/views/partials/dataExplanation.html
+++ b/public/views/partials/dataExplanation.html
@@ -1,3 +1,6 @@
+<script>
+  $("#dataDiscovery").css("font-weight", "bold")
+</script>
 <div class="container index">
   <div class="chapterTitle">
     <h2>Chapter 1: Discovering our Data</h2>
