--- a/public/views/partials/improvingYourAlgorithm.html
+++ b/public/views/partials/improvingYourAlgorithm.html
@@ -1,3 +1,6 @@
+<script>
+    $("#optimizing").css("font-weight", "bold")
+</script>
 <div class="container index">
   <div class="chapterTitle">
     <h2>Chapter 4: Optimizing our Machine and Travelling Into Space</h2>
