--- a/public/views/partials/randomForests.html
+++ b/public/views/partials/randomForests.html
@@ -1,3 +1,6 @@
+  <script>
+  $("#researching").css("font-weight", "bold")
+  </script>
 <body ng-app="galaxyApp">
   <div class="container index">
   <div class="chapterTitle">
