--- a/public/views/mainindex.html
+++ b/public/views/mainindex.html
@@ -20,7 +20,7 @@
   },
   {
     element: "#step-four",
-    title: "Click Me!",
+    title: "Classify Another Galaxy!",
     content: "Our algorithm analyzes these images and produces a classification for us."
   },
   {
