--- a/public/views/partials/team.html
+++ b/public/views/partials/team.html
@@ -62,7 +62,7 @@
         <div class="col-md-8 col-md-offset-1" style="{float:none; display:inline-block; vertical-align:middle;}">
           <a name="vinnie"></a>
           <h3 class="text-info">Vinnie Giarrusso</h3>
-          <h4> Musician and teacher in his life before code.  When not spending his spare time hacking with three.js, you can find him out hiking and exploring.</h4>
+          <h4> Software engineer that loves to hack on three.js and 3d graphics.  Also an accomplished musician and avid hiker/nature explorer.</h4>
         </div>
       </div>
     </div>
